SSM dashboard fixes - dark mode

--- a/08072020/scss/dark-mode.scss
+++ b/08072020/scss/dark-mode.scss
@@ -3160,6 +3160,9 @@ ul.sapUshellInner {
                                                 }
 
                                             }
+                                            &:last-child{
+                                                border-bottom: 0;
+                                            }
                                         }
                                     }
                                 }
